--- a/ExpressApp/package.json
+++ b/ExpressApp/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "nodemon": "^1.18.9",
+    "particles.js": "^2.0.0",
     "socket.io": "^2.2.0"
   }
 }
